# yandex-taxi-testsuite

./: .gitignore  AUTHORS  LICENSE  Makefile  README.rst  index.html  objects.inv  pg.patch  pyproject.toml  pytest.ini  requirements.txt  searchindex.js  setup.cfg  setup.py
.github/: install-rabbitmq.sh
_modules/: index.html
_sources/: clickhouse.rst.txt  databases.rst.txt  index.rst.txt  intro.rst.txt  mockserver.rst.txt  mongo.rst.txt  mysql.rst.txt  other_plugins.rst.txt  postgresql.rst.txt  reference.rst.txt  servicerunner.rst.txt  staticfiles.rst.txt  testpoint.rst.txt  utils.rst.txt
_static/: documentation_options.js  pygments_pytest.css
clickhouse/: index.html
databases/: index.html
docs/: clickhouse.rst  conf.py  databases.rst  index.rst  intro.rst  kafka.rst  license.rst  mockserver.rst  mongo.rst  mysql.rst  other_plugins.rst  rabbitmq.rst  redis.rst  reference.rst  requirements.txt  servicerunner.rst  staticfiles.rst  tcp_mockserver.rst  utils.rst
genindex/: index.html
intro/: index.html
kafka/: index.html
license/: index.html
mockserver/: index.html
mongo/: index.html
mysql/: index.html
other_plugins/: index.html
postgresql/: index.html
rabbitmq/: index.html
redis/: index.html
reference/: index.html
search/: index.html
servicerunner/: index.html
staticfiles/: index.html
tcp_mockserver/: index.html
testpoint/: index.html
tests/: conftest.py  test_ensure_db_indexes.py  test_http.py  test_json_util.py  test_loaders.py  test_ordered_object.py  test_service_client.py
testsuite/: __init__.py  pytest_plugin.py
(+308 files in other folders)
