[metadata]
name = yandex-taxi-testsuite
version = 0.1.5.1
description = Yandex.Taxi Testsuite Package
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/yandex/yandex-taxi-testsuite
project_urls =
    Bug Tracker = https://github.com/yandex/yandex-taxi-testsuite/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[aliases]
test=pytest

[options]
zip_safe = no
python_requires = >=3.6
